Process templates using `gulp-hb`.

--- a/slushfile.js/generators/default/templates/bower.json
+++ b/slushfile.js/generators/default/templates/bower.json
@@ -4,12 +4,12 @@
     "phaser": "~2.3.0",
     "almond": "~0.3.0"
   },
-  {{# customBuild }}
+  {{#if customBuild}}
   "overrides": {
     "phaser": {
       "main": "build/custom/phaser-{{{ customBuild }}}.js"
     }
   },
-  {{/ customBuild }}
+  {{/if}}
   "private": true
 }
