--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
   "dependencies": {
     "gulp": "^3.8.11",
     "gulp-conflict": "^0.4.0",
+    "gulp-hb": "^2.6.0",
     "gulp-if": "^1.2.5",
     "gulp-install": "^0.4.0",
     "gulp-load-plugins": "^0.10.0",
-    "gulp-mustache": "^1.0.2",
     "gulp-rename": "^1.2.2",
     "inquirer": "^0.8.2",
     "lodash": "^3.7.0",
