--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
   "devDependencies": {
     "gulp-jshint": "^1.10.0",
     "jshint-stylish": "^1.0.1",
-    "mocha": "^2.2.5"
+    "mocha": "^2.2.5",
+    "mock-gulp-dest": "^0.1.1"
   },
   "license": "MIT"
 }
