Downgrading `gulp-install` temporarily.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "gulp-conflict": "^0.4.0",
     "gulp-hb": "^2.6.0",
     "gulp-if": "^1.2.5",
-    "gulp-install": "^0.4.0",
+    "gulp-install": "~0.3.0",
     "gulp-load-plugins": "^0.10.0",
     "gulp-rename": "^1.2.2",
     "inquirer": "^0.8.2",
