--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "promise": "^7.0.0"
   },
   "devDependencies": {
+    "eslint": "^0.24.1",
     "gulp-jshint": "^1.10.0",
     "jshint-stylish": "^1.0.1",
     "mocha": "^2.2.5",
