--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   ],
   "main": "slushfile.js",
   "scripts": {
-    "lint": "gulp lint",
+    "lint": "eslint slushfile.js/ test/",
     "test": "NODE_ENV=test mocha test/test-*.js --reporter spec"
   },
   "preferGlobal": true,
