--- a/slushfile.js/generators/default/templates/package.json
+++ b/slushfile.js/generators/default/templates/package.json
@@ -6,31 +6,30 @@
   "devDependencies": {
     "autoprefixer-core": "^5.0.0",
     "babel-core": "^5.0.0",
-    "bower": "^1.3.12",
-    "browser-sync": "^2.0.0",
-    "del": "^1.1.1",
-    "gulp": "^3.8.7",
+    "bower": "^1.4.0",
+    "browser-sync": "^2.7.0",
+    "del": "^1.2.0",
+    "gulp": "^3.9.0",
     "gulp-babel": "^5.0.0",
-    "gulp-cached": "^1.0.1",
-    "gulp-concat": "^2.3.4",
-    "gulp-filter": "^2.0.2",
-    "gulp-hb": "^2.1.1",
-    "gulp-jshint": "^1.8.4",
+    "gulp-cached": "^1.1.0",
+    "gulp-concat": "^2.5.0",
+    "gulp-eslint": "^1.0.0",
+    "gulp-filter": "^3.0.0",
+    "gulp-hb": "^2.6.0",
     "gulp-less": "^3.0.0",
     "gulp-load-plugins": "^0.10.0",
-    "gulp-manifest": "0.0.6",
-    "gulp-minify-css": "^1.0.0",
-    "gulp-notify": "^2.0.1",
+    "gulp-manifest": "~0.0.0",
+    "gulp-minify-css": "^1.1.0",
+    "gulp-notify": "^2.2.0",
     "gulp-postcss": "^5.0.0",
     "gulp-processhtml": "^1.1.0",
     "gulp-remember": "^0.3.0",
     "gulp-rename": "^1.2.0",
-    "gulp-sourcemaps": "^1.1.5",
-    "gulp-uglify": "^1.0.1",
+    "gulp-sourcemaps": "^1.5.0",
+    "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.0",
-    "jshint-stylish": "^1.0.0",
     "main-bower-files": "^2.4.1",
-    "postcss": "^4.0.1",
+    "postcss": "^4.1.0",
     "require-dir": "^0.3.0"
   },
   "scripts": {
