--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   "dependencies": {
     "gulp": "^3.8.11",
     "gulp-conflict": "^0.4.0",
+    "gulp-filter": "^3.0.0",
     "gulp-hb": "^2.6.0",
-    "gulp-if": "^1.2.5",
     "gulp-install": "~0.3.0",
     "gulp-load-plugins": "^0.10.0",
     "gulp-rename": "^1.2.2",
