--- a/slushfile.js/generators/default/templates/package.json
+++ b/slushfile.js/generators/default/templates/package.json
@@ -3,14 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "description": {{{ json description }}},
+  "dependencies": {
+    "phaser": "^2.4.2"
+  },
   "devDependencies": {
+    "audiosprite": "^0.5.0",
     "autoprefixer-core": "^5.0.0",
-    "babel-core": "^5.0.0",
-    "bower": "^1.4.0",
+    "babelify": "^6.1.3",
     "browser-sync": "^2.7.0",
-    "del": "^1.2.0",
+    "browserify": "^11.0.1",
+    "del": "^2.0.0",
     "gulp": "^3.9.0",
-    "gulp-babel": "^5.0.0",
     "gulp-cached": "^1.1.0",
     "gulp-concat": "^2.5.0",
     "gulp-eslint": "^1.0.0",
@@ -18,25 +21,32 @@
     "gulp-hb": "^2.6.0",
     "gulp-less": "^3.0.0",
     "gulp-load-plugins": "^0.10.0",
-    "gulp-manifest": "~0.0.0",
     "gulp-minify-css": "^1.1.0",
     "gulp-notify": "^2.2.0",
-    "gulp-postcss": "^5.0.0",
+    "gulp-postcss": "^6.0.0",
     "gulp-processhtml": "^1.1.0",
-    "gulp-remember": "^0.3.0",
     "gulp-rename": "^1.2.0",
     "gulp-sourcemaps": "^1.5.0",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.0",
-    "main-bower-files": "^2.4.1",
-    "postcss": "^4.1.0",
-    "require-dir": "^0.3.0"
+    "lodash.assign": "^3.2.0",
+    "postcss": "^5.0.0",
+    "require-dir": "^0.3.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.3.1"
+  },
+  "browserify": {
+    "transform": [
+      "babelify"
+    ]
   },
   "scripts": {
     "dist": "gulp dist",
     "clean": "gulp dist:clean",
     "start": "gulp default",
-    "postinstall": "bower install"
+    "audiosprite": "audiosprite -e m4a -f jukebox -g 3",
+    "audiosprite:sfx": "npm run audiosprite -- -o static/assets/sfx resources/sfx/*.wav"
   },
-  "license": "MIT"
+  "license": ""
 }
