--- a/slushfile.js/generators/default/templates/package.json
+++ b/slushfile.js/generators/default/templates/package.json
@@ -8,11 +8,12 @@
   },
   "devDependencies": {
     "audiosprite": "^0.5.0",
-    "autoprefixer-core": "^5.0.0",
+    "autoprefixer": "^6.0.0",
     "babelify": "^6.1.3",
     "browser-sync": "^2.7.0",
     "browserify": "^11.0.1",
     "del": "^2.0.0",
+    "estraverse": "^4.1.0",
     "gulp": "^3.9.0",
     "gulp-cached": "^1.1.0",
     "gulp-concat": "^2.5.0",
