--- a/slushfile.js/generators/default/templates/package.json
+++ b/slushfile.js/generators/default/templates/package.json
@@ -1,43 +1,33 @@
 {
   "private": true,
   "dependencies": {
-    "phaser": "^2.4.2"
+    "phaser": "^2.4.4"
   },
   "devDependencies": {
     "audiosprite": "^0.5.0",
-    "autoprefixer": "^6.0.0",
-    "babelify": "^6.1.3",
+    "babel-polyfill": "^6.0.16",
+    "babel-preset-es2015": "^6.0.15",
+    "babelify": "^7.2.0",
     "browser-sync": "^2.7.0",
-    "browserify": "^11.0.1",
+    "browserify": "^12.0.0",
     "del": "^2.0.0",
-    "estraverse": "^4.1.0",
     "gulp": "^3.9.0",
     "gulp-cached": "^1.1.0",
     "gulp-concat": "^2.5.0",
     "gulp-eslint": "^1.0.0",
     "gulp-filter": "^3.0.0",
-    "gulp-hb": "^2.6.0",
-    "gulp-less": "^3.0.0",
-    "gulp-load-plugins": "^0.10.0",
-    "gulp-minify-css": "^1.1.0",
+    "gulp-load-plugins": "^1.0.0",
     "gulp-notify": "^2.2.0",
-    "gulp-postcss": "^6.0.0",
     "gulp-processhtml": "^1.1.0",
     "gulp-rename": "^1.2.0",
     "gulp-sourcemaps": "^1.5.0",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.0",
-    "lodash.assign": "^3.2.0",
-    "postcss": "^5.0.0",
+    "object-assign": "^4.0.1",
     "require-dir": "^0.3.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.3.1"
-  },
-  "browserify": {
-    "transform": [
-      "babelify"
-    ]
   },
   "scripts": {
     "dist": "gulp dist",
