--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "gulp-filter": "^3.0.0",
     "gulp-hb": "^2.6.0",
     "gulp-install": "~0.3.0",
-    "gulp-load-plugins": "^0.10.0",
+    "gulp-load-plugins": "~1.1.0",
     "gulp-rename": "^1.2.2",
-    "inquirer": "^0.10.0",
+    "inquirer": "~0.11.0",
     "lodash": "^3.7.0",
     "promise": "^7.0.0"
   },
