--- a/package.json
+++ b/package.json
@@ -27,21 +27,15 @@
     "node": ">=0.10.0"
   },
   "dependencies": {
-    "gulp": "^3.8.11",
-    "gulp-conflict": "^0.4.0",
-    "gulp-filter": "^3.0.0",
-    "gulp-hb": "^2.6.0",
-    "gulp-install": "~0.3.0",
-    "gulp-load-plugins": "~1.1.0",
-    "gulp-rename": "^1.2.2",
-    "inquirer": "~0.11.0",
-    "lodash": "^3.7.0",
-    "promise": "^7.0.0"
+    "chalk": "^1.0.0",
+    "lodash": "^3.10.0",
+    "yeoman-generator": "^0.21.0",
+    "yosay": "^1.0.0"
   },
   "devDependencies": {
-    "eslint": "^1.0.0",
-    "mocha": "^2.2.5",
-    "mock-gulp-dest": "^0.1.1"
+    "eslint": "^1.9.0",
+    "mocha": "^2.3.0",
+    "yeoman-assert": "^2.0.0"
   },
   "license": "MIT"
 }
