--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-  "name": "slush-phaser-plus",
-  "description": "A Slush generator for Phaser web game projects, packed with lots of good features.",
+  "name": "generator-phaser-plus",
+  "description": "A Yeoman generator for Phaser web games, featuring a live environment with Babel, BrowserSync, Browserify and much more.",
   "version": "0.0.6",
-  "homepage": "https://github.com/rblopes/slush-phaser-plus#readme",
+  "homepage": "https://github.com/rblopes/generator-phaser-plus#readme",
   "author": "Rafael Barbosa Lopes <rafael.barbosalopes@gmail.com>",
   "contributors": [],
   "repository": {
     "type": "git",
-    "url": "https://github.com/rblopes/slush-phaser-plus.git"
+    "url": "https://github.com/rblopes/generator-phaser-plus.git"
   },
-  "bugs": {
-    "url": "https://github.com/rblopes/slush-phaser-plus/issues"
-  },
+  "bugs": "https://github.com/rblopes/generator-phaser-plus/issues",
   "keywords": [
+    "es2015",
+    "es6",
     "gamedev",
     "phaser",
-    "slushgenerator"
+    "scaffold",
+    "yeoman-generator"
   ],
-  "main": "slushfile.js",
   "scripts": {
     "lint": "eslint generators/*/*.js lib/*.js test/*.js",
     "test": "NODE_ENV=test mocha test/*.js --reporter spec"
   },
   "preferGlobal": true,
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=0.12.0"
   },
   "dependencies": {
     "chalk": "^1.0.0",
