--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: node_js
 
 sudo: false
 node_js:
-  - '0.10'
+  - v5
+  - v4
+  - iojs
   - '0.12'
-  - 'iojs'
-  - 'stable'
 
 script:
   - npm run lint
