--- a/package.json
+++ b/package.json
@@ -29,14 +29,15 @@
   "dependencies": {
     "chalk": "^1.0.0",
     "lodash": "^3.10.0",
-    "yeoman-generator": "^0.21.0",
+    "yeoman-generator": "^0.22.0",
     "yosay": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^1.9.0",
     "eslint-config-xo-space": "*",
     "mocha": "^2.3.0",
-    "yeoman-assert": "^2.0.0"
+    "yeoman-assert": "^2.0.0",
+    "yeoman-test": "^1.0.0"
   },
   "license": "MIT"
 }
