Favor Lodash modules and fix 'PascalCase' in class names.

--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
   },
   "dependencies": {
     "chalk": "^1.0.0",
-    "lodash": "^4.0.0",
+    "lodash.camelcase": "^4.0.1",
+    "lodash.flowright": "^3.2.1",
+    "lodash.isempty": "^4.1.1",
+    "lodash.trim": "^4.0.2",
+    "lodash.upperfirst": "^4.0.2",
     "yeoman-generator": "^0.22.0",
     "yosay": "^1.0.0"
   },
