--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "eslint": "^2.0.0",
+    "eslint-config-xo": "*",
     "eslint-config-xo-space": "*",
     "mocha": "^2.3.0",
     "yeoman-assert": "^2.0.0",
