--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "scaffold"
   ],
   "scripts": {
-    "lint": "eslint generators/*/*.js lib/*.js test/*.js",
+    "lint": "xo",
     "test": "NODE_ENV=test mocha test/*.js --reporter spec"
   },
   "preferGlobal": true,
@@ -36,12 +36,20 @@
     "yeoman-generator": "^0.22.0"
   },
   "devDependencies": {
-    "eslint": "^2.0.0",
-    "eslint-config-xo": "*",
-    "eslint-config-xo-space": "*",
     "mocha": "^2.3.0",
+    "xo": "*",
     "yeoman-assert": "^2.0.0",
     "yeoman-test": "^1.0.0"
+  },
+  "xo": {
+    "space": true,
+    "envs": [
+      "node",
+      "mocha"
+    ],
+    "ignores": [
+      "generators/*/templates/**"
+    ]
   },
   "license": "MIT"
 }
