--- a/package.json
+++ b/package.json
@@ -56,7 +56,10 @@
     ],
     "ignores": [
       "generators/*/templates/**"
-    ]
+    ],
+    "rules": {
+      "xo/no-process-exit": 0
+    }
   },
   "license": "MIT"
 }
