Validate package for public release using `publish-please`.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   ],
   "scripts": {
     "lint": "xo",
+    "prepublish": "publish-please guard",
+    "publish-please": "publish-please",
     "test": "NODE_ENV=test mocha --reporter spec"
   },
   "preferGlobal": true,
@@ -44,6 +46,7 @@
   },
   "devDependencies": {
     "mocha": "^2.3.0",
+    "publish-please": "^2.1.4",
     "xo": "*",
     "yeoman-assert": "^2.0.0",
     "yeoman-test": "^1.0.0"
