Added the generator manual.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "generator-phaser-plus",
-  "description": "A Yeoman generator for Phaser web games, featuring a live environment with Babel, BrowserSync, Browserify and much more.",
+  "description": "Create Phaser Web games using Browserify, BrowserSync, Gulp and more.",
   "version": "0.7.0",
   "homepage": "https://github.com/rblopes/generator-phaser-plus#readme",
-  "author": "Rafael Barbosa Lopes <rafael.barbosalopes@gmail.com>",
+  "author": "Rafael Barbosa Lopes <rafael.barbosalopes@gmail.com> (https://github.com/rblopes)",
   "contributors": [],
   "repository": {
     "type": "git",
@@ -12,12 +12,17 @@
   "bugs": "https://github.com/rblopes/generator-phaser-plus/issues",
   "keywords": [
     "yeoman-generator",
+    "babel",
     "canvas",
     "es2015",
+    "es2016",
+    "es2017",
     "es6",
+    "es7",
     "esnext",
     "game development",
     "gamedev",
+    "games",
     "html5",
     "phaser",
     "scaffold",
