--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Create Phaser Web games using Browserify, BrowserSync, Gulp and more.",
   "version": "1.0.0",
   "homepage": "https://github.com/rblopes/generator-phaser-plus#readme",
-  "author": "Rafael Barbosa Lopes <rafael.barbosalopes@gmail.com> (https://github.com/rblopes)",
+  "author": "Rafael Barbosa Lopes (https://github.com/rblopes)",
   "contributors": [],
   "repository": {
     "type": "git",
