--- a/generators/app/templates/esnext/package.json
+++ b/generators/app/templates/esnext/package.json
@@ -4,17 +4,18 @@
     "dist": "gulp dist",
     "lint": "gulp lint",
     "start": "gulp",
-    "test-dist": "npm run dist && browser-sync start -c gulpfile.js/bs-config.js"
+    "test-dist": "gulp test-dist"
   },
   "dependencies": {
     "phaser-ce": "^2.7.0"
   },
   "devDependencies": {
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-polyfill": "^6.16.0",
-    "babel-preset-latest": "^6.16.0",
-    "babel-preset-stage-2": "^6.18.0",
-    "babel-runtime": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-polyfill": "^6.22.0",
+    "babel-preset-env": "^1.1.8",
+    "babel-preset-latest": "^6.22.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "babel-runtime": "^6.22.0",
     "babelify": "^7.3.0",
     "browser-sync": "^2.18.0",
     "browserify": "^13.1.0",
