--- a/esnext/package.json
+++ b/esnext/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-polyfill": "^6.16.0",
+    "babel-preset-env": "^1.1.8",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
     "babel-runtime": "^6.18.0",
