--- a/templates/default/package.json
+++ b/templates/default/package.json
@@ -1,20 +1,18 @@
 {
   "scripts": {
-    "start": "webpack-dashboard -- webpack-dev-server --config config/"
+    "start": "webpack-dev-server --config config/"
   },
   "dependencies": {
-    "babel-polyfill": "^6.23.0",
-    "phaser": "^3.0.0-alpha.2"
+    "babel-polyfill": "^6.26.0",
+    "phaser": "^3.0.0-beta.13"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-env": "^1.6.0",
-    "expose-loader": "^0.7.3",
-    "html-webpack-plugin": "^2.29.0",
-    "webpack": "^3.4.0",
-    "webpack-dashboard": "^0.4.0",
-    "webpack-dev-server": "^2.6.1"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "html-webpack-plugin": "^2.30.1",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.7"
   },
   "private": true
 }
