--- a/packages/generator-phaser-plus/generators/app/templates/scripts/package.json
+++ b/packages/generator-phaser-plus/generators/app/templates/scripts/package.json
@@ -3,13 +3,13 @@
     "start": "webpack-dev-server --config config/"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "phaser": "^3.0.0-beta.13"
+    "@babel/polyfill": "^7.0.0-beta.35",
+    "phaser": "^3.0.0-beta.14"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
+    "@babel/core": "^7.0.0-beta.35",
+    "@babel/preset-env": "^7.0.0-beta.35",
+    "babel-loader": "^8.0.0-beta.0",
     "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
