--- a/generators/app/templates/esnext/.babelrc
+++ b/generators/app/templates/esnext/.babelrc
@@ -1,25 +1,12 @@
 {
   "presets": [
-    "latest",
-    "stage-2",
     [
       "env",
       {
         "targets": {
-          "browsers": [
-            "last 2 versions"
-          ]
+          "browsers": "last 2 versions"
         },
         "useBuiltIns": true
-      }
-    ]
-  ],
-  "plugins": [
-    [
-      "transform-runtime",
-      {
-        "polyfill": true,
-        "regenerator": false
       }
     ]
   ]
