Fixed xo warnings.

--- a/package.json
+++ b/package.json
@@ -66,6 +66,9 @@
       "generators/*/templates/**",
       "test/fixtures/**"
     ],
+    "rules": {
+      "capitalized-comments": "off"
+    },
     "space": true
   },
   "license": "MIT"
