--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "chalk": "^1.1.0",
+    "detect-installed": "^2.0.4",
     "lodash.camelcase": "^4.3.0",
     "lodash.isempty": "^4.4.0",
     "lodash.trim": "^4.5.0",
