--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-phaser-plus",
-  "description": "Create Phaser Web games using Browserify, BrowserSync, Gulp and more.",
+  "description": "Create Phaser Web games using Browserify, Browsersync, Gulp and more.",
   "version": "2.3.1",
   "homepage": "https://github.com/rblopes/generator-phaser-plus#readme",
   "author": "Rafael Barbosa Lopes (https://github.com/rblopes)",
