--- a/generator/package.json
+++ b/generator/package.json
@@ -46,6 +46,7 @@
     "detect-installed": "^2.0.4",
     "lodash.camelcase": "^4.3.0",
     "lodash.isempty": "^4.4.0",
+    "lodash.kebabcase": "^4.1.1",
     "lodash.trim": "^4.5.0",
     "lodash.upperfirst": "^4.3.0",
     "yeoman-generator": "^1.1.0"
