Changed project layout.

--- a/templates/commonjs/.yo-rc.json
+++ b/templates/commonjs/.yo-rc.json
@@ -1,14 +1,15 @@
 {
   "generator-phaser-plus": {
     "baseTemplate": "commonjs",
-    "dirs": {
-      "objects": "src/objects/",
-      "plugins": "src/plugins/",
-      "states": "src/states/"
+    "objects": {
+      "dest": "app/scripts/objects/"
     },
-    "states": {
-      "moduleName": "src/states/index.js",
-      "requirePath": "./"
+    "scenes": {
+      "dest": "app/scripts/states/",
+      "index": {
+        "name": "app/scripts/states/index.js",
+        "requirePath": "./"
+      }
     }
   }
 }
