--- a/templates/esnext/package.json
+++ b/templates/esnext/package.json
@@ -1,11 +1,20 @@
 {
-  "scripts": {},
+  "scripts": {
+    "start": "webpack-dashboard -- webpack-dev-server --config config/"
+  },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "phaser-ce": "^2.8.3"
   },
   "devDependencies": {
-    "babel-preset-env": "^1.6.0"
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
+    "expose-loader": "^0.7.3",
+    "html-webpack-plugin": "^2.29.0",
+    "webpack": "^3.4.0",
+    "webpack-dashboard": "^0.4.0",
+    "webpack-dev-server": "^2.6.1"
   },
   "private": true
 }
