--- a/generator/generators/app/templates/esnext/package.json
+++ b/generator/generators/app/templates/esnext/package.json
@@ -1,45 +1,20 @@
 {
   "scripts": {
-    "clean": "gulp clean",
-    "dist": "gulp dist",
-    "lint": "gulp lint",
-    "start": "gulp",
-    "test-dist": "gulp test-dist"
+    "start": "webpack-dashboard -- webpack-dev-server --config config/"
   },
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "phaser-ce": "^2.8.3"
   },
   "devDependencies": {
-    "babel-polyfill": "^6.23.0",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
-    "babelify": "^7.3.0",
-    "browser-sync": "^2.18.13",
-    "browserify": "^14.4.0",
-    "del": "^3.0.0",
-    "gulp": "^3.9.1",
-    "gulp-cached": "^1.1.0",
-    "gulp-eslint": "^4.0.0",
-    "gulp-if": "^2.0.1",
-    "gulp-json-minify": "^1.0.9",
-    "gulp-load-plugins": "^1.5.0",
-    "gulp-notify": "^3.0.0",
-    "gulp-processhtml": "^1.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^2.5.0",
-    "gulp-uglify": "^3.0.0",
-    "gulp-util": "^3.0.7",
-    "lazypipe": "^1.0.1",
-    "merge-stream": "^1.0.0",
-    "require-dir": "^0.3.2",
-    "run-sequence": "^2.0.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.9.0"
-  },
-  "browserify": {
-    "transform": [
-      "babelify"
-    ]
+    "expose-loader": "^0.7.3",
+    "html-webpack-plugin": "^2.29.0",
+    "webpack": "^3.4.0",
+    "webpack-dashboard": "^0.4.0",
+    "webpack-dev-server": "^2.6.1"
   },
   "private": true
 }
