--- a/generator/package.json
+++ b/generator/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-phaser-plus",
   "description": "Create Phaser Web games using Browserify, Browsersync, Gulp and more.",
-  "version": "2.4.1",
+  "version": "3.0.0-alpha.0",
   "homepage": "https://github.com/rblopes/generator-phaser-plus/tree/master/generator#readme",
   "author": "Rafael Barbosa Lopes (https://github.com/rblopes)",
   "contributors": [],
