Updated generator templates.

--- a/templates/commonjs/.yo-rc.json
+++ b/templates/commonjs/.yo-rc.json
@@ -5,9 +5,9 @@
       "dest": "app/scripts/objects/"
     },
     "scenes": {
-      "dest": "app/scripts/states/",
+      "dest": "app/scripts/scenes/",
       "index": {
-        "name": "app/scripts/states/index.js",
+        "name": "app/scripts/scenes/index.js",
         "requirePath": "./"
       }
     }
