Run XO and Mocha using the same script.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,4 @@ branches:
     - master
 
 script:
-  - cd generator
-  - npm install
-  - npm run lint
-  - npm test
+  - cd generator && npm install && npm test
