--- a/packages/generator-phaser-plus/generators/app/templates/scripts/package.json
+++ b/packages/generator-phaser-plus/generators/app/templates/scripts/package.json
@@ -1,18 +1,25 @@
 {
   "scripts": {
-    "start": "webpack-dev-server --config config/"
+    "dist": "gulp dist",
+    "start": "gulp"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0-beta.35",
-    "phaser": "^3.0.0-beta.14"
+    "@babel/polyfill": "^7.0.0-beta.38",
+    "phaser": "^3.0.0-beta.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.35",
-    "@babel/preset-env": "^7.0.0-beta.35",
+    "@babel/core": "^7.0.0-beta.38",
+    "@babel/preset-env": "^7.0.0-beta.38",
     "babel-loader": "^8.0.0-beta.0",
+    "browser-sync": "^2.23.6",
+    "del": "^3.0.0",
+    "fancy-log": "^1.3.2",
+    "gulp": "^4.0.0",
     "html-webpack-plugin": "^2.30.1",
+    "plugin-error": "^1.0.1",
+    "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7"
+    "webpack-dev-middleware": "^2.0.4"
   },
   "private": true
 }
