--- a/packages/generator-phaser-plus-template-default/package.json
+++ b/packages/generator-phaser-plus-template-default/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "generator-phaser-plus",
+  "name": "@rblopes/generator-phaser-plus-template-default",
   "description": "Create Phaser Web games with ease.",
-  "version": "3.0.0-alpha.3",
-  "homepage": "https://github.com/rblopes/generator-phaser-plus/tree/master/packages/generator-phaser-plus#readme",
+  "version": "0.0.0",
+  "homepage": "https://github.com/rblopes/generator-phaser-plus/tree/master/packages/generator-phaser-plus-template-default#readme",
   "author": "Rafael Barbosa Lopes (https://github.com/rblopes)",
   "contributors": [],
   "repository": {
@@ -13,48 +13,48 @@
   "keywords": [
     "yeoman-generator",
     "babel",
+    "browsersync",
     "canvas",
     "es2015",
     "es2016",
     "es2017",
+    "es2018",
     "es6",
     "es7",
+    "es8",
     "esnext",
     "game development",
     "gamedev",
     "games",
+    "gulp",
     "html5",
     "phaser",
     "scaffold",
-    "webgl"
+    "webgl",
+    "webpack"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
+  "main": "index.js",
   "files": [
-    "generators/",
-    "lib/"
+    "index.js",
+    "test.js"
   ],
   "scripts": {
     "fix": "xo --fix",
     "test": "xo && NODE_ENV=test mocha --reporter spec"
   },
-  "preferGlobal": true,
   "engines": {
     "node": ">=4"
   },
   "dependencies": {
-    "@rblopes/generator-phaser-plus-template-default": "^0.0.0",
-    "chalk": "^2.3.0",
-    "detect-installed": "^2.0.4",
-    "lodash.camelcase": "^4.3.0",
-    "lodash.isempty": "^4.4.0",
-    "lodash.kebabcase": "^4.1.1",
-    "lodash.trim": "^4.5.0",
-    "lodash.upperfirst": "^4.3.0",
-    "yeoman-generator": "^2.0.1"
+    "yeoman-generator": "^2.0.2"
   },
   "devDependencies": {
-    "fs-extra": "^4.0.3",
-    "mocha": "^4.0.1",
-    "xo": "^0.19.0",
+    "chalk": "^2.3.0",
+    "mocha": "^5.0.0",
+    "xo": "^0.18.2",
     "yeoman-assert": "^3.1.0",
     "yeoman-test": "^1.7.0"
   },
@@ -65,8 +65,7 @@
     ],
     "esnext": true,
     "ignores": [
-      "generators/*/templates/**",
-      "test/fixtures/**"
+      "templates/**"
     ],
     "rules": {
       "capitalized-comments": "off"
