Fixed script typo.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "pretest": "learn bootstrap",
+    "pretest": "lerna bootstrap",
     "test": "lerna run test"
   },
   "devDependencies": {
