--- a/packages/generator-phaser-plus-template-default/templates/scripts/package.json
+++ b/packages/generator-phaser-plus-template-default/templates/scripts/package.json
@@ -5,7 +5,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0-beta.38",
-    "phaser": "^3.0.0-beta.19"
+    "phaser": "^3.0.0-beta.20"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.38",
@@ -17,7 +17,8 @@
     "gulp": "^4.0.0",
     "html-webpack-plugin": "^2.30.1",
     "plugin-error": "^1.0.1",
-    "uglifyjs-webpack-plugin": "^1.1.6",
+    "raw-loader": "^0.5.1",
+    "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.10.0",
     "webpack-dev-middleware": "^2.0.4"
   },
