Fixed CLI not included in the package.

--- a/packages/generator-phaser-plus/package.json
+++ b/packages/generator-phaser-plus/package.json
@@ -34,10 +34,10 @@
     "webpack"
   ],
   "bin": {
-    "phaser-plus": "cli.js"
+    "phaser-plus": "./cli.js"
   },
   "files": [
-    "cli/",
+    "cli.js",
     "generators/",
     "lib/"
   ],
