--- a/packages/generator-phaser-plus/package.json
+++ b/packages/generator-phaser-plus/package.json
@@ -43,7 +43,7 @@
   ],
   "scripts": {
     "fix": "xo --fix",
-    "test": "xo && NODE_ENV=test mocha --reporter spec"
+    "test": "xo && cross-env NODE_ENV=test mocha --reporter spec"
   },
   "preferGlobal": true,
   "engines": {
@@ -63,6 +63,7 @@
     "yeoman-generator": "^2.0.1"
   },
   "devDependencies": {
+    "cross-env": "^5.1.3",
     "fs-extra": "^5.0.0",
     "mocha": "^5.0.0",
     "xo": "^0.18.0",
