--- a/packages/generator-phaser-plus/package.json
+++ b/packages/generator-phaser-plus/package.json
@@ -52,12 +52,12 @@
   "dependencies": {
     "@rblopes/generator-phaser-plus-template-default": "^1.0.0-beta.1",
     "chalk": "^2.3.0",
-    "detect-installed": "^2.0.4",
     "lodash.camelcase": "^4.3.0",
     "lodash.isempty": "^4.4.0",
     "lodash.kebabcase": "^4.1.1",
     "lodash.trim": "^4.5.0",
     "lodash.upperfirst": "^4.3.0",
+    "which": "^1.3.0",
     "yargs": "^11.0.0",
     "yeoman-environment": "^2.0.5",
     "yeoman-generator": "^2.0.1"
