--- a/packages/generator-phaser-plus/package.json
+++ b/packages/generator-phaser-plus/package.json
@@ -57,6 +57,7 @@
     "lodash.kebabcase": "^4.1.1",
     "lodash.trim": "^4.5.0",
     "lodash.upperfirst": "^4.3.0",
+    "superb": "^2.0.0",
     "which": "^1.3.0",
     "yargs": "^11.0.0",
     "yeoman-environment": "^2.0.5",
