--- a/packages/generator-phaser-plus-template-default/templates/scripts/package.json
+++ b/packages/generator-phaser-plus-template-default/templates/scripts/package.json
@@ -1,26 +1,36 @@
 {
+  "title": <%- JSON.stringify(title) %>,
+  "description": <%- JSON.stringify(description) %>,
+  "version": "1.0.0",
+  "url": "https://example.com/",
   "scripts": {
+    "clean": "gulp clean",
     "dist": "gulp dist",
+    "format": "eslint \"app/scripts/**/*.js\" --fix",
+    "lint": "eslint \"app/scripts/**/*.js\"",
     "start": "gulp"
   },
-  "dependencies": {
-    "@babel/polyfill": "^7.0.0-beta.40",
-    "phaser": "^3.2.0"
-  },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.40",
-    "@babel/preset-env": "^7.0.0-beta.40",
+    "@babel/core": "^7.0.0-beta.41",
+    "@babel/preset-env": "^7.0.0-beta.41",
     "babel-loader": "^8.0.0-beta.2",
     "browser-sync": "^2.23.6",
     "del": "^3.0.0",
+    "eslint": "^4.18.2",
+    "eslint-loader": "^2.0.0",
     "fancy-log": "^1.3.2",
     "gulp": "^4.0.0",
-    "html-webpack-plugin": "^3.0.4",
+    "html-webpack-plugin": "^3.0.6",
     "plugin-error": "^1.0.1",
     "raw-loader": "^0.5.1",
-    "uglifyjs-webpack-plugin": "^1.2.2",
-    "webpack": "^4.1.0",
-    "webpack-dev-middleware": "^3.0.0"
+    "read-pkg-up": "^3.0.0",
+    "uglifyjs-webpack-plugin": "^1.2.3",
+    "webpack": "^4.1.1",
+    "webpack-dev-middleware": "^3.0.1"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.0.0-beta.41",
+    "phaser": "^3.2.1"
   },
   "private": true
 }
