--- a/templates/default/package.json
+++ b/templates/default/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.0.0-beta.42",
     "babel-loader": "^8.0.0-beta.2",
     "browser-sync": "^2.23.6",
+    "copy-webpack-plugin": "^4.5.1",
     "del": "^3.0.0",
     "eslint": "^4.19.0",
     "eslint-loader": "^2.0.0",
