--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,7 @@
 {
   "lerna": "2.0.0",
   "npmClient": "yarn",
+  "registry": "https://registry.npmjs.org/",
   "useWorkspaces": true,
   "version": "independent"
 }
