--- a/templates/default/package.json
+++ b/templates/default/package.json
@@ -11,25 +11,25 @@
     "start": "gulp"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.54",
-    "@babel/preset-env": "^7.0.0-beta.54",
-    "babel-loader": "^8.0.0-beta.4",
-    "browser-sync": "^2.24.6",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "babel-loader": "^8.0.2",
+    "browser-sync": "^2.24.7",
     "copy-webpack-plugin": "^4.5.2",
     "del": "^3.0.0",
-    "eslint": "^5.2.0",
+    "eslint": "^5.5.0",
     "eslint-loader": "^2.1.0",
     "fancy-log": "^1.3.2",
     "gulp": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "plugin-error": "^1.0.1",
     "read-pkg-up": "^4.0.0",
-    "webpack": "^4.16.2",
-    "webpack-dev-middleware": "^3.1.3"
+    "webpack": "^4.17.2",
+    "webpack-dev-middleware": "^3.2.0"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0-beta.54",
-    "phaser": "^3.11.0"
+    "@babel/polyfill": "^7.0.0",
+    "phaser": "^3.12.0"
   },
   "private": true
 }
