Fixed lint issues.
Includes an override to the 'quotes' rule of ESLint/XO to mimic the old
behavior.

--- a/packages/generator-phaser-plus-template-default/package.json
+++ b/packages/generator-phaser-plus-template-default/package.json
@@ -70,7 +70,14 @@
       "templates/**"
     ],
     "rules": {
-      "capitalized-comments": "off"
+      "capitalized-comments": "off",
+      "quotes": [
+        "error",
+        "single",
+        {
+          "allowTemplateLiterals": true
+        }
+      ]
     },
     "space": true
   },
