--- a/packages/generator-phaser-plus/package.json
+++ b/packages/generator-phaser-plus/package.json
@@ -81,6 +81,14 @@
       "generators/*/templates/**",
       "test/fixtures/**"
     ],
+    "overrides": [
+      {
+        "files": "test/*.js",
+        "rules": {
+          "promise/prefer-await-to-then": "off"
+        }
+      }
+    ],
     "rules": {
       "capitalized-comments": "off",
       "quotes": [
