--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "lodash.kebabcase": "^4.1.1",
     "lodash.trim": "^4.5.0",
     "lodash.upperfirst": "^4.3.0",
+    "shelljs": "^0.8.3",
     "superb": "^4.0.0",
-    "which": "^1.3.1",
     "yargs": "^15.0.2",
     "yeoman-environment": "^2.4.0",
     "yeoman-generator": "^4.0.1"
